feat: :sparkles: Added endpoint for getting customer's bookings and creation of bookings
